--- a/docs/index.css
+++ b/docs/index.css
@@ -23,3 +23,47 @@
         @apply font-mono md:text-sm sm:text-xs text-[0.6rem]
     }
 }
+
+#main-section-vid-slider .rangeSlider .pip {
+    transition: all 0.25s ease-in;
+    width: 2px;
+    transform: translateX(-50%);
+    background-color: #cbd5e1;
+}
+
+#main-section-vid-slider .rangeSlider .pip.in-range-custom {
+    height: 0.6em;
+    background: #d946ef;
+}
+
+#main-section-vid-slider .rangeSlider .pip.selected {
+    height: 1em;
+    background: #d946ef;
+    width: 3px;
+}
+
+#main-section-vid-slider .rangeSlider {
+    border-radius: 2px;
+    margin-bottom: 24px;
+    background-color: #cbd5e1;
+}
+
+#main-section-vid-slider .rangeHandle {
+    width: 16px;
+    height: 16px;
+    top: -0.5em;
+}
+
+#main-section-vid-slider .rangeNub {
+    background: url('data:image/svg+xml,<svg viewBox="81.5216 14.5185 15.9999 23.9949" width="16" height="16px" xmlns="http://www.w3.org/2000/svg"><g transform="matrix(0.05333300307393073, 0, 0, 0.05333300307393073, 78.06338500976562, 12.390434265136715)"><rect x="64.841" y="39.902" width="300" height="300" style="fill: rgb(217, 70, 239);"/><rect x="111.607" y="73.265" width="212" height="212" transform="matrix(0.707107, 0.707107, -0.707107, 0.707107, 187.636292, 59.270811)" style="fill: rgb(217, 70, 239);"/></g></svg>');
+    border-radius: 6px;
+}
+
+#main-section-vid-slider .rangeNub:hover {
+    transition: none;
+    box-shadow: none;
+}
+
+#main-section-vid-slider .rangeHandle.press .rangeNub {
+    top: 1px;
+}
