--- a/docs/output.css
+++ b/docs/output.css
@@ -770,6 +770,10 @@ video {
   margin-top: 0.5rem;
 }
 
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .block {
   display: block;
 }
@@ -830,12 +834,20 @@ video {
   height: 2rem;
 }
 
+.h-\[16px\] {
+  height: 16px;
+}
+
 .h-\[1vh\] {
   height: 1vh;
 }
 
 .h-\[40rem\] {
   height: 40rem;
+}
+
+.h-\[8px\] {
+  height: 8px;
 }
 
 .h-auto {
@@ -907,12 +919,40 @@ video {
   width: 24rem;
 }
 
+.w-\[10\%\] {
+  width: 10%;
+}
+
+.w-\[16px\] {
+  width: 16px;
+}
+
+.w-\[17\%\] {
+  width: 17%;
+}
+
+.w-\[18\%\] {
+  width: 18%;
+}
+
+.w-\[20\%\] {
+  width: 20%;
+}
+
+.w-\[35\%\] {
+  width: 35%;
+}
+
 .w-\[60vw\] {
   width: 60vw;
 }
 
 .w-\[64rem\] {
   width: 64rem;
+}
+
+.w-\[87\%\] {
+  width: 87%;
 }
 
 .w-\[90\%\] {
@@ -1038,6 +1078,16 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.translate-y-\[3px\] {
+  --tw-translate-y: 3px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-45 {
+  --tw-rotate: 45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .-skew-y-1 {
   --tw-skew-y: -1deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1066,6 +1116,10 @@ video {
 
 .scale-y-50 {
   --tw-scale-y: .5;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1147,6 +1201,10 @@ video {
   justify-content: space-around;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1165,6 +1223,14 @@ video {
   border-radius: 9999px;
 }
 
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
+.border-b-2 {
+  border-bottom-width: 2px;
+}
+
 .border-l-2 {
   border-left-width: 2px;
 }
@@ -1176,6 +1242,11 @@ video {
 .border-gray-800 {
   --tw-border-opacity: 1;
   border-color: rgb(31 41 55 / var(--tw-border-opacity));
+}
+
+.border-main-dark {
+  --tw-border-opacity: 1;
+  border-color: rgb(147 51 234 / var(--tw-border-opacity));
 }
 
 .border-main-light {
@@ -1244,6 +1315,11 @@ video {
 
 .bg-stone-950\/90 {
   background-color: rgb(12 10 9 / 0.9);
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-\[url\(\'\.\/images\/aboutBg\.jpg\'\)\] {
@@ -1379,6 +1455,10 @@ video {
 
 .to-fuchsia-500\/40 {
   --tw-gradient-to: rgb(217 70 239 / 0.4) var(--tw-gradient-to-position);
+}
+
+.to-main-dark {
+  --tw-gradient-to: #9333ea var(--tw-gradient-to-position);
 }
 
 .to-main-light {
@@ -1788,6 +1868,50 @@ video {
 
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+
+#main-section-vid-slider .rangeSlider .pip {
+  transition: all 0.25s ease-in;
+  width: 2px;
+  transform: translateX(-50%);
+  background-color: #cbd5e1;
+}
+
+#main-section-vid-slider .rangeSlider .pip.in-range-custom {
+  height: 0.6em;
+  background: #d946ef;
+}
+
+#main-section-vid-slider .rangeSlider .pip.selected {
+  height: 1em;
+  background: #d946ef;
+  width: 3px;
+}
+
+#main-section-vid-slider .rangeSlider {
+  border-radius: 2px;
+  margin-bottom: 24px;
+  background-color: #cbd5e1;
+}
+
+#main-section-vid-slider .rangeHandle {
+  width: 16px;
+  height: 16px;
+  top: -0.5em;
+}
+
+#main-section-vid-slider .rangeNub {
+  background: url('data:image/svg+xml,<svg viewBox="81.5216 14.5185 15.9999 23.9949" width="16" height="16px" xmlns="http://www.w3.org/2000/svg"><g transform="matrix(0.05333300307393073, 0, 0, 0.05333300307393073, 78.06338500976562, 12.390434265136715)"><rect x="64.841" y="39.902" width="300" height="300" style="fill: rgb(217, 70, 239);"/><rect x="111.607" y="73.265" width="212" height="212" transform="matrix(0.707107, 0.707107, -0.707107, 0.707107, 187.636292, 59.270811)" style="fill: rgb(217, 70, 239);"/></g></svg>');
+  border-radius: 6px;
+}
+
+#main-section-vid-slider .rangeNub:hover {
+  transition: none;
+  box-shadow: none;
+}
+
+#main-section-vid-slider .rangeHandle.press .rangeNub {
+  top: 1px;
 }
 
 .hover\:fill-main-light:hover {
