--- a/docs/output.css
+++ b/docs/output.css
@@ -744,10 +744,6 @@ video {
   margin: 0.5rem;
 }
 
-.m-4 {
-  margin: 1rem;
-}
-
 .-mb-2 {
   margin-bottom: -0.5rem;
 }
@@ -939,10 +935,6 @@ video {
 
 .w-8 {
   width: 2rem;
-}
-
-.w-96 {
-  width: 24rem;
 }
 
 .w-\[10\%\] {
@@ -1263,6 +1255,11 @@ video {
   background-color: rgb(209 190 230 / var(--tw-bg-opacity));
 }
 
+.bg-emerald-main {
+  --tw-bg-opacity: 1;
+  background-color: rgb(16 185 129 / var(--tw-bg-opacity));
+}
+
 .bg-main-light {
   --tw-bg-opacity: 1;
   background-color: rgb(217 70 239 / var(--tw-bg-opacity));
@@ -1354,6 +1351,12 @@ video {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
 
+.from-emerald-dark\/70 {
+  --tw-gradient-from: rgb(5 150 105 / 0.7) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(5 150 105 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
 .from-main-dark {
   --tw-gradient-from: #9333ea var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(147 51 234 / 0) var(--tw-gradient-to-position);
@@ -1368,12 +1371,6 @@ video {
 
 .from-main-light {
   --tw-gradient-from: #d946ef var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(217 70 239 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-main-light\/0 {
-  --tw-gradient-from: rgb(217 70 239 / 0) var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(217 70 239 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
@@ -1414,9 +1411,9 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.via-main-dark\/80 {
-  --tw-gradient-to: rgb(147 51 234 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), rgb(147 51 234 / 0.8) var(--tw-gradient-via-position), var(--tw-gradient-to);
+.via-emerald-light\/70 {
+  --tw-gradient-to: rgb(16 185 129 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), rgb(16 185 129 / 0.7) var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
 .via-main-light {
@@ -1467,10 +1464,6 @@ video {
 
 .to-main-light {
   --tw-gradient-to: #d946ef var(--tw-gradient-to-position);
-}
-
-.to-main-light\/0 {
-  --tw-gradient-to: rgb(217 70 239 / 0) var(--tw-gradient-to-position);
 }
 
 .to-red-500\/70 {
@@ -1786,9 +1779,9 @@ video {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
-.ring-main-dark {
+.ring-emerald-main {
   --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(147 51 234 / var(--tw-ring-opacity));
+  --tw-ring-color: rgb(16 185 129 / var(--tw-ring-opacity));
 }
 
 .ring-main-main {
